--- a/websocket-server/package.json
+++ b/websocket-server/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "redis": "^4.6.10",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "tslint": "^6.1.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   }
 }
